Issue #1065 Added basic collapse

--- a/extension/css/cryptup.css
+++ b/extension/css/cryptup.css
@@ -318,30 +318,32 @@ table#compose th { width: 538px; height: 36px; text-align: left; margin: 0; bord
 table#compose th div.header h1 { font-size: 15px; font-weight: normal; color: #FFF; text-align: left;}
 table#compose.sign th { background-color: #808080; border-color: #808080; }
 table#compose td.input { height: 42px; vertical-align: middle; }
-table#compose td#input_addresses_container { vertical-align: middle; }
-table#compose td#input_addresses_container > div { width: 100%; overflow: hidden; cursor: text; }
-table#compose td#input_addresses_container > div input#input_to { vertical-align: middle; height: 25px; margin: 1px 0;}
-table#compose td#input_addresses_container > div .recipients span { margin-top: 2px; margin-left: 5px; display: inline-block; border-radius: 6px; position: relative;
+table#compose td.input .collapsed { padding: 6px 9px; cursor: text; }
+table#compose td.input .collapsed .placeholder { color: #636c72 }
+table#compose td.recipients-inputs { vertical-align: middle; }
+table#compose td.recipients-inputs > div#input_addresses_container div { width: 100%; overflow: hidden; cursor: text; }
+table#compose td.recipients-inputs > div#input_addresses_container div input#input_to { vertical-align: middle; height: 25px; margin: 1px 0;}
+table#compose td.recipients-inputs > div#input_addresses_container div .recipients span { margin-top: 2px; margin-left: 5px; display: inline-block; border-radius: 6px; position: relative;
   -webkit-transition: .25s; transition: .25s;}
-table#compose td#input_addresses_container > div .recipients { height: auto; position: relative; }
-table#compose td#input_addresses_container > div .recipients span { padding: 5px 15px 6px 15px; }
-table#compose td#input_addresses_container > div .recipients span > img { width: 10px; height: 10px; opacity: 0.7; position: relative; right: 5px; top: 1px; }
-table#compose td#input_addresses_container > div .recipients span > img.repeat-icon { right: -6px; top: 1px; cursor: pointer;}
-table#compose td#input_addresses_container > div .recipients span > img.close-icon-black { margin-left: 5px; top: 1px; right: -8px; cursor: pointer;}
-table#compose td#input_addresses_container > div .recipients span > img.expired-time { opacity: 1; };
-table#compose td#input_addresses_container > div .recipients span i { padding-left: 4px; position: relative; top: 1px; right:-2px; opacity: 0.85;
+table#compose td.recipients-inputs > div#input_addresses_container div .recipients { height: auto; position: relative; }
+table#compose td.recipients-inputs > div#input_addresses_container div .recipients span { padding: 5px 15px 6px 15px; }
+table#compose td.recipients-inputs > div#input_addresses_container div .recipients span > img { width: 10px; height: 10px; opacity: 0.7; position: relative; right: 5px; top: 1px; }
+table#compose td.recipients-inputs > div#input_addresses_container div .recipients span > img.repeat-icon { right: -6px; top: 1px; cursor: pointer;}
+table#compose td.recipients-inputs > div#input_addresses_container div .recipients span > img.close-icon-black { margin-left: 5px; top: 1px; right: -8px; cursor: pointer;}
+table#compose td.recipients-inputs > div#input_addresses_container div .recipients span > img.expired-time { opacity: 1; };
+table#compose td.recipients-inputs > div#input_addresses_container div .recipients span i { padding-left: 4px; position: relative; top: 1px; right:-2px; opacity: 0.85;
   cursor: pointer; color: black; font-size: 90%; }
-table#compose td#input_addresses_container > div .recipients span .close-icon { right: -7px; height: 9px; width: 9px; top:0; cursor: pointer; }
-table#compose td#input_addresses_container > div .recipients span .close-icon:hover { opacity: 1; }
-table#compose td#input_addresses_container > div .recipients span .close-icon.display_when_sign { display: none; }
-table#compose td#input_addresses_container > div .recipients span.wrong { background: #A44; color: white;}
-table#compose td#input_addresses_container > div .recipients span.wrong .close-icon { opacity: 1; }
-table#compose td#input_addresses_container > div .recipients span.has_pgp { background: #31A217; color: white;}
-table#compose td#input_addresses_container > div .recipients span.has_pgp img { opacity: 1; }
-table#compose td#input_addresses_container > div .recipients span.expired { background: #d18826; color: white;}
-table#compose td#input_addresses_container > div .recipients span.no_pgp { background: #989898; color: white;}
-table#compose td#input_addresses_container > div .recipients span.failed { border: 1px dashed #A44; }
-table#compose td#input_addresses_container > div .recipients span.failed .close-icon { opacity: 1; }
+table#compose td.recipients-inputs > div#input_addresses_container div .recipients span .close-icon { right: -7px; height: 9px; width: 9px; top:0; cursor: pointer; }
+table#compose td.recipients-inputs > div#input_addresses_container div .recipients span .close-icon:hover { opacity: 1; }
+table#compose td.recipients-inputs > div#input_addresses_container div .recipients span .close-icon.display_when_sign { display: none; }
+table#compose td.recipients-inputs > div#input_addresses_container div .recipients span.wrong { background: #A44; color: white;}
+table#compose td.recipients-inputs > div#input_addresses_container div .recipients span.wrong .close-icon { opacity: 1; }
+table#compose td.recipients-inputs > div#input_addresses_container div .recipients span.has_pgp { background: #31A217; color: white;}
+table#compose td.recipients-inputs > div#input_addresses_container div .recipients span.has_pgp img { opacity: 1; }
+table#compose td.recipients-inputs > div#input_addresses_container div .recipients span.expired { background: #d18826; color: white;}
+table#compose td.recipients-inputs > div#input_addresses_container div .recipients span.no_pgp { background: #989898; color: white;}
+table#compose td.recipients-inputs > div#input_addresses_container div .recipients span.failed { border: 1px dashed #A44; }
+table#compose td.recipients-inputs > div#input_addresses_container div .recipients span.failed .close-icon { opacity: 1; }
 table#compose.sign .recipients span { border: none !important; background-color: #f0f0f0 !important; color: black !important; }
 table#compose.sign .recipients span.wrong { background: #A44 !important; color: white !important; }
 table#compose.sign .recipients span.wrong .close-icon { display: inline-block !important; }
